# otk

./: .gitignore  .nfs0000002e0170db5d00000b8f  .nfs0000002e0170db5f00000b76  .nfs0000002e0170db6100000b90  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  REFACTOR_PLAN.md  hyperparameter_optimization.py  optimized_hybrid_ensemble.py  preprocess_data.py  pyproject.toml  retrain_api_models.py  retrain_api_models_gpu.py  retrain_api_models_parallel.py  run_advanced_ecdna.py  run_baseline.py  run_baseline_balanced.py  run_baseline_ecdna.py  run_baseline_ecdna_full.py  run_baseline_optimized.py  run_both_models.py  run_dgit.py  run_ensemble_ecdna.py  run_ensemble_optimized_ecdna.py  run_improved.py  run_improved_v2.py  run_improved_v2_ecdna.py  run_improved_v2_ecdna_full.py  run_new_models.py  run_optimized_ecdna.py  run_optimized_ecdna_v2.py  run_precision_focused.py  run_tabpfn.py  run_transformer_ecdna.py  run_transformer_optimized.py  run_xgb11.py  (+11 more)
.github/workflows/: publish.yml
configs/: advanced_ecdna.yml  baseline_balanced.yml  baseline_config.yml  baseline_ecdna.yml  baseline_ecdna_full.yml  baseline_optimized.yml  best_model_config.yml  dgit_super.yml  dgit_v1.yml  ensemble_ecdna.yml  ensemble_optimized_ecdna.yml  improved_config.yml  improved_v2_config.yml  improved_v2_ecdna.yml  improved_v2_ecdna_full.yml  improved_v2_optimized.yml  model_config.yml  optimized_ecdna.yml  optimized_ecdna_v2.yml  precision_focused.yml  transformer_ecdna.yml  transformer_optimized.yml
otk_api/: .gitignore  README.md  __init__.py  config.yml  model_analyzer.py  requirements.txt  start_api.sh  update_gene_level_metrics.py
otk_api/api/: cleanup.py  config.py  data_validator.py  i18n.py  main.py  models.py  predictor_wrapper.py  resource_manager.py  schemas.py  tasks.py
otk_api/download/: __init__.py  model_downloader.py
otk_api/models/: model_analysis_report.md
otk_api/models/baseline/: config.yml  test_metrics.yml
otk_api/models/baseline_mlp/: baseline_mlp_model.pkl  best_model.pkl  best_model.pth  config.yml  log_info.yml  test_metrics.yml  training_history.yml  training_summary.yml
otk_api/models/deep_residual/: best_model.pkl  best_model.pth  config.yml  deep_residual_model.pkl  log_info.yml  test_metrics.yml  training_history.yml  training_summary.yml
otk_api/models/dgit_super/: config.yml  log_info.yml  test_metrics.yml  training_history.yml  training_summary.yml
otk_api/models/dgit_v1/: config.yml
otk_api/models/optimized_residual/: best_model.pkl  best_model.pth  config.yml  log_info.yml  optimized_residual_model.pkl  test_metrics.yml  training_history.yml  training_summary.yml
otk_api/models/source_data/: dataset_statistics.csv  gene_level_performance.csv  sample_level_performance.csv
otk_api/models/tabpfn/: config.yml  training_summary.yml
otk_api/models/transformer/: best_model.pkl  best_model.pth  config.yml  log_info.yml  test_metrics.yml  training_history.yml  training_summary.yml
otk_api/models/xgb11/: feature_importance.csv  feature_importance_optimized.csv  feature_importance_original.csv  training_summary.yml  training_summary_optimized.yml  training_summary_original.yml  xgb11_model.pkl  xgb11_optimized_model.pkl  xgb11_original_model.pkl
otk_api/models/xgb11_full/: feature_importance_full.csv  training_summary_full.yml  xgb11_full_model.pkl
otk_api/models/xgb11_paper/: feature_importance_paper.csv  training_summary_paper.yml  xgb11_paper_model.pkl
otk_api/models/xgb_new/: best_model.pkl  config.yml  feature_importance.csv  feature_importance_new.csv  training_summary.yml  training_summary_new.yml  xgb11_new_model.pkl  xgb_new_model.pkl
otk_api/models/xgb_paper/: best_model.pkl  config.yml  feature_importance.csv  training_summary.yml  xgb_paper_model.pkl
otk_api/models/xgb_tuned/: all_trials.csv  best_model.pkl  config.yml  feature_importance.csv  hyperparam_results.json  training_summary.yml
otk_api/sample_data/: sample.csv
otk_api/static/: model_analysis_report.md
otk_api/tests/: test_predict_api.py
output_amplicon_optimized/: best_model.pth  config.yml
output_optimized/: best_model.pth  config.yml  log_info.yml  test_metrics.yml  training_summary.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/data/: feature_engineering.rs  loader.rs  mod.rs  preprocessing.rs
src/model/: architecture.rs  checkpoint.rs  loss.rs  missing_value_layer.rs  mod.rs
src/otk/: __init__.py  cli.py
src/otk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/otk/data/: __init__.py  data_processor.py  data_split.py  extract_gene_frequencies.py  gene_frequencies.csv  sample_y_sum.csv  split_2026.json
src/otk/models/: __init__.py  advanced_ecdna_model.py  base_model.py  baseline_model.py  config_generator.py  custom_losses.py  dgit_model.py  dgit_super_model.py  dgit_super_v2_model.py  ecdna_losses.py  improved_model.py  improved_model_v2.py  model.py  neural_models.py  optimized_ecdna_model.py  tabpfn_model.py  transformer_ecdna_model.py  xgb11_model.py  xgb_models.py
src/otk/predict/: __init__.py  predictor.py
src/otk/train/: trainer.py
src/otk/utils/: __init__.py
src/predict/: mod.rs
src/training/: callbacks.rs  mod.rs  scheduler.rs  trainer.rs
src/utils/: mod.rs
test_predict_output/predictions_inconsistent_columns/: predictions.csv
test_predict_output/predictions_missing_values/: predictions.csv
test_predict_output/test_data/: missing_values.csv  test_combined_issues.csv  test_inconsistent_columns.csv  test_missing_values.csv  test_normal.csv
tests/: test_data_processor.py
