[package]
name = "otk"
version = "0.1.0"
edition = "2024"
authors = ["OTK Team"]
description = "ecDNA prediction tool using deep learning"
license = "MIT"
repository = "https://github.com/WanglabCSU/otk"

[[bin]]
name = "otk"
path = "src/main.rs"

[dependencies]
# Core dependencies - using burn 0.20.1 as requested
burn = "0.20.1"
burn-ndarray = "0.20.1"

# Data processing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.8"
rand_chacha = "0.3"
ndarray = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
