[project]
name = "otk-ecdna"
version = "1.0.2"
description = "ecDNA Analysis Toolkit - Deep learning-based extrachromosomal DNA prediction"
authors = [
    { name = "Shixiang Wang", email = "wangshx@csu.edu.cn" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ecDNA", "extrachromosomal DNA", "deep learning", "bioinformatics", "cancer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core dependencies
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    # CLI
    "click>=8.1",
    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "adjustText>=0.8",  # For plot label adjustment
    # Deep learning
    "torch>=2.0",
    # XGBoost
    "xgboost>=2.0",
    # API server (optional, but included for full functionality)
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "markdown>=3.5",
    # Download functionality
    "requests>=2.28",
]

[project.optional-dependencies]
# Full installation with all optional dependencies
full = [
    "tabpfn>=2.0",  # TabPFN model
    "celery>=5.3",  # Async task processing
    "redis>=5.0",   # Celery backend
    "sqlalchemy>=2.0",  # Database
    "psutil>=5.9",  # Resource monitoring
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]
# Documentation dependencies
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/WangLabCSU/otk"
Documentation = "https://github.com/WangLabCSU/otk#readme"
Repository = "https://github.com/WangLabCSU/otk.git"
Issues = "https://github.com/WangLabCSU/otk/issues"
Paper = "https://www.nature.com/articles/s41467-024-XXXX-X"

[project.scripts]
otk = "otk.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["otk", "otk.data", "otk.models", "otk.predict", "otk.utils", "otk_api", "otk_api.api"]
package-dir = { "" = "src", "otk_api" = "otk_api" }

[tool.setuptools.package-data]
otk = [
    "data/*.csv.gz",
    "data/*.csv",
    "data/*.json",
]
otk_api = [
    "static/*.png",
    "static/*.md",
    "models/xgb_new/*.pkl",
    "models/xgb_new/*.yml",
    "models/xgb_new/*.csv",
    "models/xgb_paper/*.pkl",
    "models/xgb_paper/*.yml",
    "models/xgb_paper/*.csv",
    "models/xgb_tuned/*.pkl",
    "models/xgb_tuned/*.yml",
    "models/xgb_tuned/*.csv",
    "models/baseline_mlp/*.pkl",
    "models/baseline_mlp/*.yml",
    "models/transformer/*.pkl",
    "models/transformer/*.yml",
    "models/deep_residual/*.pkl",
    "models/deep_residual/*.yml",
    "models/optimized_residual/*.pkl",
    "models/optimized_residual/*.yml",
    "models/dgit_super/*.pkl",
    "models/dgit_super/*.yml",
    "models/source_data/*.csv",
    "models/tabpfn/config.yml",
    "models/tabpfn/training_summary.yml",
    "README.md",
]

[tool.setuptools.exclude-package-data]
otk_api = ["*.pdf", "models/*.png", "models/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
